--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,17 +10,17 @@
             <div class="top-left">
                 <div class="text"><i class="fa fa-map-marker color2 me-2"></i>Saddar, Karachi. Pakistan</div>
                 <ul class="social-links">
-                    <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                    <li><a href="#"><span class="fab fa-facebook"></span></a></li>
-                    <li><a href="#"><span class="fab fa-pinterest"></span></a></li>
-                    <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+                    <li><a ><span class="fab fa-twitter"></span></a></li>
+                    <li><a ><span class="fab fa-facebook"></span></a></li>
+                    <li><a ><span class="fab fa-pinterest"></span></a></li>
+                    <li><a ><span class="fab fa-instagram"></span></a></li>
                 </ul>
             </div>
 
             <div class="top-right">
                 <!-- Info List -->
                 <ul class="info-list">
-                    <li><i class="fa fa-envelope"></i> <a href="mailto:needhelp@company.com">mail@fcl.com</a>
+                    <li><i class="fa fa-envelope"></i> <a>mail@fcl.com</a>
                     </li>
                     <li><i class="fa fa-clock"></i> Mon - Sat 03:00 PM - 09:30 PM, Sunday - CLOSED</li>
                 </ul>
@@ -50,9 +50,9 @@
                             <span class="icon lnr lnr-icon-search"></span>
                         </button>
 
-                        <a href="#" class="ui-btn"><i class="lnr-icon-user"></i></a>
+                        <a  class="ui-btn"><i class="lnr-icon-user"></i></a>
 
-                        <a href="#" class="theme-btn btn-style-one info-btn">
+                        <a class="theme-btn btn-style-one info-btn">
                             <span class="btn-title"><i class="icon lnr-icon-phone-handset">
                                 </i><small>Call Anytime</small>
                                 <br> +92 (340) 2437207
@@ -87,7 +87,7 @@
                         <div class="contact-info-box">
                             <i class="icon lnr-icon-phone-handset"></i>
                             <span class="title">Call Now</span>
-                            <a href="tel:+92880098670">+92 (8800) - 98670</a>
+                            <a >+92 (8800) - 98670</a>
                         </div>
                     </li>
                     <li>
@@ -95,7 +95,7 @@
                         <div class="contact-info-box">
                             <span class="icon lnr-icon-envelope1"></span>
                             <span class="title">Send Email</span>
-                            <a href="mailto:help@company.com">help@company.com</a>
+                            <a >help@company.com</a>
                         </div>
                     </li>
                     <li>
@@ -110,10 +110,10 @@
 
 
                 <ul class="social-links">
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a ><i class="fab fa-twitter"></i></a></li>
+                    <li><a ><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a ><i class="fab fa-pinterest"></i></a></li>
+                    <li><a ><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </nav>
         </div><!-- End Mobile Menu -->
@@ -204,7 +204,7 @@
                             data-y="['middle','middle','middle','middle']" data-textalign="['top','top','top','top']"
                             data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'>
                             <div class="btn-box">
-                                <a href="#" class="theme-btn btn-style-one"><span class="btn-title">Discover
+                                <a  class="theme-btn btn-style-one"><span class="btn-title">Discover
                                         more</span></a>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                             data-y="['middle','middle','middle','middle']" data-textalign="['top','top','top','top']"
                             data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'>
                             <div class="btn-box">
-                                <a href="#" class="theme-btn btn-style-one"><span class="btn-title">Discover
+                                <a  class="theme-btn btn-style-one"><span class="btn-title">Discover
                                         more</span></a>
                             </div>
                         </div>
@@ -266,10 +266,10 @@
                 <div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box ">
                         <i class="icon flaticon-airplane-2"></i>
-                        <h4><a href="page-service-details.html">Air Freight</a></h4>
+                        <h4><a >Air Freight</a></h4>
                         <div class="text">Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do
                             eiusmod.</div>
-                        <figure class="image"><a href="page-service-details.html"><img
+                        <figure class="image"><a ><img
                                     src="../../assets/images/resource/top-service-1.jpg" alt=""></a></figure>
                     </div>
                 </div>
@@ -278,10 +278,10 @@
                 <div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="300ms">
                     <div class="inner-box">
                         <i class="icon flaticon-cargo-boat"></i>
-                        <h4><a href="page-service-details.html">Ocean Freight</a></h4>
+                        <h4><a >Ocean Freight</a></h4>
                         <div class="text">Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do
                             eiusmod.</div>
-                        <figure class="image"><a href="page-service-details.html"><img
+                        <figure class="image"><a ><img
                                     src="../../assets/images/resource/top-service-2.jpg" alt=""></a></figure>
                     </div>
                 </div>
@@ -290,10 +290,10 @@
                 <div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="600ms">
                     <div class="inner-box">
                         <i class="icon flaticon-delivery-truck-3"></i>
-                        <h4><a href="page-service-details.html">Road Transport</a></h4>
+                        <h4><a >Road Transport</a></h4>
                         <div class="text">Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do
                             eiusmod.</div>
-                        <figure class="image"><a href="page-service-details.html"><img
+                        <figure class="image"><a ><img
                                     src="../../assets/images/resource/top-service-3.jpg" alt=""></a></figure>
                     </div>
                 </div>
@@ -325,7 +325,7 @@
                         <div class="bottom-box">
                             <figure class="video-box">
                                 <img src="../../assets/images/resource/about-3.jpg" alt="">
-                                <a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-now"
+                                <a  class="play-now"
                                     data-fancybox="gallery" data-caption=""><i class="icon fa fa-play"
                                         aria-hidden="true"></i><span class="ripple"></span></a>
                             </figure>
@@ -335,7 +335,7 @@
                                 <li><i class="flaticon-on-time"></i> On - time delivery service</li>
                             </ul>
 
-                            <a href="page-about.html" class="theme-btn btn-style-one"><span class="btn-title">Discover
+                            <a  class="theme-btn btn-style-one"><span class="btn-title">Discover
                                     more</span></a>
                         </div>
                     </div>
@@ -368,11 +368,11 @@
                     <div class="inner-box">
                         <div class="content-box">
                             <i class="icon flaticon-delivery-2"></i>
-                            <h4><a href="#">Replenishment and Picking</a></h4>
+                            <h4><a >Replenishment and Picking</a></h4>
                             <div class="text">Dolores molestias excepturi occaecati cupiditated non provident quas.
                             </div>
                         </div>
-                        <a href="page-project-details.html" class="process-btn">
+                        <a  class="process-btn">
                             <span class="count"><span>01</span></span>
                             <span class="btn-title">More Detail</span>
                         </a>
@@ -384,11 +384,11 @@
                     <div class="inner-box">
                         <div class="content-box">
                             <i class="icon flaticon-distribution-center-1"></i>
-                            <h4><a href="#">Warehousing Operation</a></h4>
+                            <h4><a >Warehousing Operation</a></h4>
                             <div class="text">Dolores molestias excepturi occaecati cupiditated non provident quas.
                             </div>
                         </div>
-                        <a href="page-project-details.html" class="process-btn">
+                        <a  class="process-btn">
                             <span class="count"><span>02</span></span>
                             <span class="btn-title">More Detail</span>
                         </a>
@@ -400,11 +400,11 @@
                     <div class="inner-box">
                         <div class="content-box">
                             <i class="icon flaticon-distribution-center-2"></i>
-                            <h4><a href="#">Packaging and Distribution</a></h4>
+                            <h4><a >Packaging and Distribution</a></h4>
                             <div class="text">Dolores molestias excepturi occaecati cupiditated non provident quas.
                             </div>
                         </div>
-                        <a href="page-project-details.html" class="process-btn">
+                        <a  class="process-btn">
                             <span class="count"><span>03</span></span>
                             <span class="btn-title">More Detail</span>
                         </a>
@@ -416,11 +416,11 @@
                     <div class="inner-box">
                         <div class="content-box">
                             <i class="icon flaticon-flow"></i>
-                            <h4><a href="#">Transportation Process</a></h4>
+                            <h4><a >Transportation Process</a></h4>
                             <div class="text">Dolores molestias excepturi occaecati cupiditated non provident quas.
                             </div>
                         </div>
-                        <a href="page-project-details.html" class="process-btn">
+                        <a  class="process-btn">
                             <span class="count"><span>04</span></span>
                             <span class="btn-title">More Detail</span>
                         </a>
@@ -439,7 +439,7 @@
         <div class="auto-container">
             <div class="sec-title light text-center mb-0">
                 <h1>Hundreds of customers <br>trust our company</h1>
-                <a href="page-about.html" class="theme-btn btn-style-one"><span class="btn-title">Get a free
+                <a  class="theme-btn btn-style-one"><span class="btn-title">Get a free
                         Quote</span></a>
             </div>
         </div>
@@ -692,7 +692,7 @@
                 <div class="content-column">
                     <div class="inner-column">
                         <div class="content-box">
-                            <a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-now"
+                            <a  class="play-now"
                                 data-fancybox="gallery" data-caption=""><i class="icon fa fa-play"
                                     aria-hidden="true"></i><span class="ripple"></span></a>
                             <span class="logo-icon"><img src="../../assets/images/icons/logo-icon.png" alt=""></span>
@@ -713,19 +713,19 @@
             <div class="sponsors-outer">
                 <!--clients carousel-->
                 <ul class="clients-carousel owl-carousel owl-theme">
-                    <li class="slide-item"> <a href="#"><img src="../../assets/images/resource/client.png" alt=""></a>
+                    <li class="slide-item"> <a ><img src="../../assets/images/resource/client.png" alt=""></a>
                     </li>
-                    <li class="slide-item"> <a href="#"><img src="../../assets/images/resource/client.png" alt=""></a>
+                    <li class="slide-item"> <a ><img src="../../assets/images/resource/client.png" alt=""></a>
                     </li>
-                    <li class="slide-item"> <a href="#"><img src="../../assets/images/resource/client.png" alt=""></a>
+                    <li class="slide-item"> <a ><img src="../../assets/images/resource/client.png" alt=""></a>
                     </li>
-                    <li class="slide-item"> <a href="#"><img src="../../assets/images/resource/client.png" alt=""></a>
+                    <li class="slide-item"> <a ><img src="../../assets/images/resource/client.png" alt=""></a>
                     </li>
-                    <li class="slide-item"> <a href="#"><img src="../../assets/images/resource/client.png" alt=""></a>
+                    <li class="slide-item"> <a ><img src="../../assets/images/resource/client.png" alt=""></a>
                     </li>
-                    <li class="slide-item"> <a href="#"><img src="../../assets/images/resource/client.png" alt=""></a>
+                    <li class="slide-item"> <a ><img src="../../assets/images/resource/client.png" alt=""></a>
                     </li>
-                    <li class="slide-item"> <a href="#"><img src="../../assets/images/resource/client.png" alt=""></a>
+                    <li class="slide-item"> <a ><img src="../../assets/images/resource/client.png" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -748,7 +748,7 @@
                 <div class="news-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="news-details.html"><img
+                            <figure class="image"><a ><img
                                         src="../../assets/images/resource/news-1.jpg" alt=""></a></figure>
                             <span class="date"><b>28</b> OCT</span>
                         </div>
@@ -757,7 +757,7 @@
                                 <li><i class="fa fa-user"></i> by Admin</li>
                                 <li><i class="fa fa-comments"></i> 02 Comments</li>
                             </ul>
-                            <h4><a href="news-details.html">We ensures you the best quality services</a></h4>
+                            <h4><a >We ensures you the best quality services</a></h4>
                         </div>
                     </div>
                 </div>
@@ -766,7 +766,7 @@
                 <div class="news-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="300ms">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="news-details.html"><img
+                            <figure class="image"><a ><img
                                         src="../../assets/images/resource/news-2.jpg" alt=""></a></figure>
                             <span class="date"><b>28</b> OCT</span>
                         </div>
@@ -775,7 +775,7 @@
                                 <li><i class="fa fa-user"></i> by Admin</li>
                                 <li><i class="fa fa-comments"></i> 02 Comments</li>
                             </ul>
-                            <h4><a href="news-details.html">We ensures you the best quality services</a></h4>
+                            <h4><a >We ensures you the best quality services</a></h4>
                         </div>
                     </div>
                 </div>
@@ -784,7 +784,7 @@
                 <div class="news-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="600ms">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="news-details.html"><img
+                            <figure class="image"><a ><img
                                         src="../../assets/images/resource/news-3.jpg" alt=""></a></figure>
                             <span class="date"><b>28</b> OCT</span>
                         </div>
@@ -793,7 +793,7 @@
                                 <li><i class="fa fa-user"></i> by Admin</li>
                                 <li><i class="fa fa-comments"></i> 02 Comments</li>
                             </ul>
-                            <h4><a href="news-details.html">We ensures you the best quality services</a></h4>
+                            <h4><a >We ensures you the best quality services</a></h4>
                         </div>
                     </div>
                 </div>
@@ -809,7 +809,7 @@
                 <div class="title-box">
                     <h2>Fastest & secure way to transport anything anytime</h2>
                 </div>
-                <div class="btn-box"><a href="page-contact.html" class="theme-btn btn-style-two"><span
+                <div class="btn-box"><a  class="theme-btn btn-style-two"><span
                             class="btn-title">get a free quote</span></a></div>
             </div>
         </div>
