--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -23,10 +23,10 @@
                             </div>
 
                             <ul class="social-icon-one">
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                <li><a ><i class="fab fa-twitter"></i></a></li>
+                                <li><a ><i class="fab fa-facebook"></i></a></li>
+                                <li><a ><i class="fab fa-pinterest-p"></i></a></li>
+                                <li><a ><i class="fab fa-instagram"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -36,11 +36,11 @@
                         <div class="footer-widget">
                             <h5 class="widget-title">Explore</h5>
                             <ul class="user-links">
-                                <li><a href="#">About Company</a></li>
-                                <li><a href="#">Pricing Plan</a></li>
-                                <li><a href="#">Request a Quote</a></li>
-                                <li><a href="#">Packaging</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a >About Company</a></li>
+                                <li><a >Pricing Plan</a></li>
+                                <li><a >Request a Quote</a></li>
+                                <li><a >Packaging</a></li>
+                                <li><a routerLink="/contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -51,17 +51,17 @@
                             <h5 class="widget-title">News</h5>
                             <div class="widget-content">
                                 <div class="post">
-                                    <div class="thumb"><a href="#"><img
+                                    <div class="thumb"><a ><img
                                                 src="../../assets/images/resource/post-thumb-1.jpg" alt=""></a></div>
                                     <span class="date">20 Jul, 2022</span>
-                                    <h4><a href="#">FCL name a finalist consumer choice award</a></h4>
+                                    <h4><a >FCL name a finalist consumer choice award</a></h4>
                                 </div>
 
                                 <div class="post">
-                                    <div class="thumb"><a href="#"><img
+                                    <div class="thumb"><a ><img
                                                 src="../../assets/images/resource/post-thumb-2.jpg" alt=""></a></div>
                                     <span class="date">20 Jul, 2022</span>
-                                    <h4><a href="#">FCL name a finalist consumer choice award</a></h4>
+                                    <h4><a >FCL name a finalist consumer choice award</a></h4>
                                 </div>
                             </div>
                         </div>
@@ -76,12 +76,12 @@
                                     <li>
                                         <i class="fa fa-phone-square"></i>
                                         <strong>Phone</strong>
-                                        <a href="tel:+926668880000">+92 (340) 2437207</a>
+                                        <a>+92 (340) 2437207</a>
                                     </li>
                                     <li>
                                         <strong>Email</strong>
                                         <i class="fa fa-envelope"></i>
-                                        <a href="mailto:needhelp@company.com">mail@fcl.com</a>
+                                        <a>mail@fcl.com</a>
                                     </li>
                                     <li>
                                         <strong>Address</strong>
