--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,17 +4,17 @@
         <div class="top-left">
             <div class="text"><i class="fa fa-map-marker color2 me-2"></i>Saddar, Karachi. Pakistan</div>
             <ul class="social-links">
-                <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                <li><a href="#"><span class="fab fa-facebook"></span></a></li>
-                <li><a href="#"><span class="fab fa-pinterest"></span></a></li>
-                <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+                <li><a ><span class="fab fa-twitter"></span></a></li>
+                <li><a ><span class="fab fa-facebook"></span></a></li>
+                <li><a ><span class="fab fa-pinterest"></span></a></li>
+                <li><a ><span class="fab fa-instagram"></span></a></li>
             </ul>
         </div>
 
         <div class="top-right">
             <!-- Info List -->
             <ul class="info-list">
-                <li><i class="fa fa-envelope"></i> <a href="mailto:needhelp@company.com">mail@fcl.com</a>
+                <li><i class="fa fa-envelope"></i> <a>mail@fcl.com</a>
                 </li>
                 <li><i class="fa fa-clock"></i> Mon - Sat 03:00 PM - 09:30 PM, Sunday - CLOSED</li>
             </ul>
@@ -44,9 +44,9 @@
                         <span class="icon lnr lnr-icon-search"></span>
                     </button>
 
-                    <a href="#" class="ui-btn"><i class="lnr-icon-user"></i></a>
+                    <a  class="ui-btn"><i class="lnr-icon-user"></i></a>
 
-                    <a href="#" class="theme-btn btn-style-one info-btn">
+                    <a  class="theme-btn btn-style-one info-btn">
                         <span class="btn-title"><i class="icon lnr-icon-phone-handset">
                             </i><small>Call Anytime</small>
                             <br> +92 (340) 2437207
@@ -81,7 +81,7 @@
                     <div class="contact-info-box">
                         <i class="icon lnr-icon-phone-handset"></i>
                         <span class="title">Call Now</span>
-                        <a href="tel:+92880098670">+92 (8800) - 98670</a>
+                        <a >+92 (8800) - 98670</a>
                     </div>
                 </li>
                 <li>
@@ -89,7 +89,7 @@
                     <div class="contact-info-box">
                         <span class="icon lnr-icon-envelope1"></span>
                         <span class="title">Send Email</span>
-                        <a href="mailto:help@company.com">help@company.com</a>
+                        <a >help@company.com</a>
                     </div>
                 </li>
                 <li>
@@ -104,10 +104,10 @@
 
 
             <ul class="social-links">
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a ><i class="fab fa-twitter"></i></a></li>
+                <li><a ><i class="fab fa-facebook-f"></i></a></li>
+                <li><a ><i class="fab fa-pinterest"></i></a></li>
+                <li><a ><i class="fab fa-instagram"></i></a></li>
             </ul>
         </nav>
     </div><!-- End Mobile Menu -->
